<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLUE RFID</string>
    <string name="action_settings">Settings</string>
    <string name="title">BLUE RFID</string>
    <string name="lastConnectLab">LAST DEVICE CONNECTED:</string>
    <string name="connLastDevice">CONNECT LAST DEVICE</string>
    <string name="scanAll">SCAN</string>
    <string name="PinPhoto">Photo</string>
    <string name="TX">TX</string>
    
</resources>
