<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E90080"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lastConnectLab"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" 
                />
                
                <Button
                    android:id="@+id/tx"
                    android:layout_alignParentRight="true"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:text="@string/TX" 
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                />
        
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" 
                    android:textColor="#FF0000"
                />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/lastDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=""
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" 
                    />
                    
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/uuidRSSI"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:text=""
                    android:textColor="#FFFFF0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                />

            </RelativeLayout>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >
                
                <TextView
                    android:id="@+id/uuCard"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" 
                    android:layout_height="30dp"
                    android:textStyle="bold"
                />
                
                <TextView
                    android:id="@+id/uuPin"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/uuCard"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" 
                    android:layout_height="30dp"
                    android:textStyle="bold"
                />

                <TextView
                    android:id="@+id/uuName"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/uuPin"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" 
                    android:layout_height="30dp"
                    android:textStyle="bold"
                />
                
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
            
        <ImageView 
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"  
            android:maxWidth="240dp"  
            android:maxHeight="240dp"  
            android:scaleType="fitXY"
            android:contentDescription="@string/PinPhoto"
        />
                
        <Button
            android:id="@+id/ConnLastDevice"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/red_button"
            android:text="@string/connLastDevice" 
            android:textSize="20sp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
        />
                
        <Button
            android:id="@+id/ScanAll"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/red_button"
            android:text="@string/scanAll" 
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
        />
        
    </RelativeLayout>

</LinearLayout>